--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chroma-js": "2.1.0",
     "css-loader": "3.2.0",
     "d3": "5.12.0",
+    "desk-ui": "valette/desk-ui",
     "electron": "7.1.2",
     "electron-builder": "22.1.0",
     "electron-packager": "14.1.0",
