--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   },
   "devDependencies": {
     "@qooxdoo/compiler": "1.0.0-beta.20191105-1146",
-    "@qooxdoo/framework": "6.0.0-beta-20191031-1343",
+    "@qooxdoo/framework": "6.0.0-beta-20191125-2103",
     "ace-builds": "1.4.7",
     "acorn": "7.1.0",
     "async": "3.1.0",
-    "bluebird": "3.7.1",
+    "bluebird": "3.7.2",
     "c3": "0.7.11",
-    "chalk": "2.4.2",
+    "chalk": "3.0.0",
     "chroma-js": "2.1.0",
-    "css-loader": "3.2.0",
-    "d3": "5.12.0",
+    "css-loader": "3.2.1",
+    "d3": "5.14.2",
     "desk-ui": "valette/desk-ui",
     "electron": "7.1.2",
     "electron-builder": "22.1.0",
-    "electron-packager": "14.1.0",
+    "electron-packager": "14.1.1",
     "heap": "0.2.6",
     "jssha": "2.3.1",
     "jstat": "1.9.2",
@@ -40,11 +40,11 @@
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
     "socket.io-client": "2.3.0",
-    "style-loader": "1.0.0",
-    "terser": "4.3.9",
-    "three": "0.105.2",
+    "style-loader": "1.0.1",
+    "terser": "4.4.1",
+    "three": "0.111.0",
     "ttest": "2.1.0",
-    "url-loader": "2.2.0",
+    "url-loader": "3.0.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
     "webworkify-webpack": "2.1.5",
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "build": "npm run clean && npm run buildApps && npm run package",
-    "buildApps": "node source/build-worker.js && npm run qooxdoo && npm run bundle && ./extra.sh",
+    "buildApps": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle && ./extra.sh",
     "bundle": "webpack && npm run terser",
     "clean": "rm -rf qx* && rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
     "clean-bin": "npm run clean-bin1 && npm run clean-bin2",
