--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "2.0.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/valette/desk-ui.git"
+    "url": "git://github.com/valette/eduAnat2.git"
   },
   "main": "script.js",
   "dependencies": {
