--- a/package.json
+++ b/package.json
@@ -14,21 +14,20 @@
     "concat-stream": "2.0.0"
   },
   "devDependencies": {
-    "@qooxdoo/compiler": "1.0.0-beta.20191105-1146",
-    "@qooxdoo/framework": "6.0.0-beta-20191125-2103",
-    "ace-builds": "1.4.7",
+    "@qooxdoo/compiler": "1.0.0-beta.20200221-0910",
+    "ace-builds": "1.4.8",
     "acorn": "7.1.0",
-    "async": "3.1.0",
+    "async": "3.1.1",
     "bluebird": "3.7.2",
-    "c3": "0.7.11",
+    "c3": "0.7.13",
     "chalk": "3.0.0",
     "chroma-js": "2.1.0",
-    "css-loader": "3.2.1",
-    "d3": "5.14.2",
+    "css-loader": "3.4.2",
+    "d3": "5.15.0",
     "desk-ui": "valette/desk-ui",
-    "electron": "7.1.3",
-    "electron-builder": "22.1.0",
-    "electron-packager": "14.1.1",
+    "electron": "8.0.1",
+    "electron-builder": "22.3.2",
+    "electron-packager": "14.2.1",
     "heap": "0.2.6",
     "jssha": "2.3.1",
     "jstat": "1.9.2",
@@ -40,15 +39,15 @@
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
     "socket.io-client": "2.3.0",
-    "style-loader": "1.0.1",
-    "terser": "4.4.2",
-    "three": "0.111.0",
-    "ttest": "2.1.0",
+    "style-loader": "1.1.3",
+    "terser": "4.6.3",
+    "three": "0.113.2",
+    "ttest": "2.1.1",
     "url-loader": "3.0.0",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11",
     "webworkify-webpack": "2.1.5",
-    "xterm": "4.2.0-vscode1"
+    "xterm": "4.4.0"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -57,7 +56,7 @@
     "build": "npm run clean && npm run buildApps && npm run package",
     "buildApps": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle && ./extra.sh",
     "bundle": "webpack && npm run terser",
-    "clean": "rm -rf qx* && rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
+    "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
     "clean-bin": "npm run clean-bin1 && npm run clean-bin2",
     "clean-bin1": "for i in ./EduAnat2-*; do rm -rf \"$i/swiftshader\"; done",
     "clean-bin2": "for i in ./EduAnat2-*; do rm -rf \"$i/resources/inspector\"; done",
