--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "concat-stream": "2.0.0"
   },
   "devDependencies": {
-    "@qooxdoo/compiler": "1.0.0-beta.20200310-1808",
+    "@qooxdoo/compiler": "1.0.0-beta.20200314-0952",
     "ace-builds": "1.4.8",
     "acorn": "7.1.1",
     "async": "3.2.0",
@@ -42,7 +42,7 @@
     "style-loader": "1.1.3",
     "terser": "4.6.6",
     "three": "0.114.0",
-    "ttest": "2.1.1",
+    "ttest": "1.1.0",
     "url-loader": "3.0.0",
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11",
@@ -54,7 +54,8 @@
   },
   "scripts": {
     "build": "npm run clean && npm run buildApps && npm run package",
-    "buildApps": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle && ./extra.sh",
+    "buildApps": "npm run buildCore && npm run qooxdoo && npm run bundle && ./extra.sh",
+    "buildCore": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle",
     "bundle": "webpack && npm run terser",
     "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
     "clean-bin": "npm run clean-bin1 && npm run clean-bin2",
