--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "chroma-js": "2.1.0",
     "css-loader": "3.4.2",
     "d3": "5.15.0",
-    "desk-ui": "valette/desk-ui",
+    "desk-ui": "2.2.1",
     "electron": "8.1.1",
     "electron-builder": "22.4.1",
     "electron-packager": "14.2.1",
