require less modules with custom bundle.js for webpack

--- a/package.json
+++ b/package.json
@@ -15,26 +15,16 @@
   },
   "devDependencies": {
     "@qooxdoo/compiler": "1.0.0-beta.20200314-0952",
-    "ace-builds": "1.4.8",
     "acorn": "7.1.1",
     "async": "3.2.0",
     "bluebird": "3.7.2",
-    "c3": "0.7.15",
-    "chalk": "3.0.0",
     "chroma-js": "2.1.0",
-    "css-loader": "3.4.2",
-    "d3": "5.15.0",
     "desk-ui": "2.2.1",
     "electron": "8.1.1",
     "electron-builder": "22.4.1",
     "electron-packager": "14.2.1",
-    "heap": "0.2.6",
     "jssha": "2.3.1",
-    "jstat": "1.9.2",
-    "kdt": "0.1.0",
     "lodash": "4.17.15",
-    "numeric": "1.2.6",
-    "operative": "0.4.6",
     "papaya-viewer": "1.0.1449",
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
@@ -42,12 +32,10 @@
     "style-loader": "1.1.3",
     "terser": "4.6.6",
     "three": "0.114.0",
-    "ttest": "1.1.0",
     "url-loader": "3.0.0",
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11",
-    "webworkify-webpack": "2.1.5",
-    "xterm": "4.4.0"
+    "webworkify-webpack": "2.1.5"
   },
   "engines": {
     "node": ">=8.0.0"
