--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "build": "npm run clean && npm run buildApps && npm run package",
-    "buildApps": "npm run buildCore && npm run qooxdoo && npm run bundle && ./extra.sh",
+    "buildApps": "npm run buildCore && npm run qooxdoo && npm run bundle && ./extra2.sh",
     "buildCore": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle",
     "bundle": "webpack && npm run terser",
     "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
@@ -55,7 +55,7 @@
     "package": "npm run package-bin && npm run clean-bin && npm run package-exe-deb-rpm && npm run zip",
     "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/build/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
-    "qooxdoo": "date > buildDate.txt && qx package update && qx package install && npm run compile",
+    "qooxdoo": "date > buildDate.txt && qx package update && qx package install && npm run compile && ./extra.sh",
     "start": "electron .",
     "terser": "terser compiled/source/eduAnat2/bundle.js --mangle -o compiled/build/eduAnat2/bundle.js",
     "updateAll": "rm -rf node_modules && git pull && npm install && npm run build",
