--- a/package.json
+++ b/package.json
@@ -14,37 +14,38 @@
     "concat-stream": "2.0.0"
   },
   "devDependencies": {
-    "@qooxdoo/compiler": "1.0.0-beta.20200314-0952",
+    "@qooxdoo/compiler": "1.0.0-beta.20200413-1323",
     "acorn": "7.1.1",
     "async": "3.2.0",
     "bluebird": "3.7.2",
     "chroma-js": "2.1.0",
-    "css-loader": "3.4.2",
+    "css-loader": "3.5.2",
     "desk-ui": "valette/desk-ui",
-    "electron": "8.1.1",
+    "electron": "8.2.1",
     "electron-builder": "22.4.1",
     "electron-packager": "14.2.1",
-    "jssha": "2.3.1",
+    "jssha": "3.0.0",
     "lodash": "4.17.15",
+    "numeric": "1.2.6",
     "papaya-viewer": "1.0.1449",
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
     "socket.io-client": "2.3.0",
     "style-loader": "1.1.3",
-    "terser": "4.6.6",
-    "three": "0.114.0",
-    "url-loader": "3.0.0",
-    "webpack": "4.42.0",
+    "terser": "4.6.11",
+    "three": "0.115.0",
+    "url-loader": "4.1.0",
+    "webpack": "4.42.1",
     "webpack-cli": "3.3.11",
     "webworkify-webpack": "2.1.5",
-    "xterm": "4.4.0"
+    "xterm": "4.5.0"
   },
   "engines": {
     "node": ">=8.0.0"
   },
   "scripts": {
     "build": "npm run clean && npm run buildApps && npm run package",
-    "buildApps": "npm run buildCore && npm run qooxdoo && npm run bundle && ./extra2.sh",
+    "buildApps": "npm run buildCore && ./extra2.sh",
     "buildCore": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle",
     "bundle": "webpack && npm run terser",
     "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
