-package update -fix icon and splash -rework bundle build

--- a/package.json
+++ b/package.json
@@ -14,31 +14,32 @@
     "concat-stream": "2.0.0"
   },
   "devDependencies": {
-    "@qooxdoo/compiler": "1.0.0-beta.20200413-1323",
-    "acorn": "7.1.1",
+    "@babel/core": "^7.11.6",
+    "@qooxdoo/compiler": "1.0.0-beta-20200904-1332",
+    "acorn": "8.0.1",
     "async": "3.2.0",
     "bluebird": "3.7.2",
     "chroma-js": "2.1.0",
-    "css-loader": "3.5.2",
+    "css-loader": "4.3.0",
     "desk-ui": "valette/desk-ui",
-    "electron": "8.2.1",
-    "electron-builder": "22.4.1",
-    "electron-packager": "14.2.1",
-    "jssha": "3.0.0",
-    "lodash": "4.17.15",
+    "electron": "10.1.2",
+    "electron-builder": "22.8.1",
+    "electron-packager": "15.1.0",
+    "jssha": "3.1.2",
+    "lodash": "4.17.20",
     "numeric": "1.2.6",
     "papaya-viewer": "1.0.1449",
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
     "socket.io-client": "2.3.0",
-    "style-loader": "1.1.3",
-    "terser": "4.6.11",
-    "three": "0.115.0",
+    "style-loader": "1.2.1",
+    "terser": "5.3.2",
+    "three": "0.120.1",
     "url-loader": "4.1.0",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
     "webworkify-webpack": "2.1.5",
-    "xterm": "4.5.0"
+    "xterm": "4.9.0"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -46,8 +47,7 @@
   "scripts": {
     "build": "npm run clean && npm run buildApps && npm run package",
     "buildApps": "npm run buildCore && ./extra2.sh",
-    "buildCore": "node node_modules/desk-ui/source/build-worker.js && npm run qooxdoo && npm run bundle",
-    "bundle": "webpack && npm run terser",
+    "buildCore": "node node_modules/desk-ui/source/build-worker.js && webpack && npm run qooxdoo",
     "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
     "clean-bin": "npm run clean-bin1 && npm run clean-bin2",
     "clean-bin1": "for i in ./EduAnat2-*; do rm -rf \"$i/swiftshader\"; done",
@@ -56,7 +56,7 @@
     "package": "npm run package-bin && npm run clean-bin && npm run package-exe-deb-rpm && npm run zip",
     "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/build/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
-    "qooxdoo": "date > buildDate.txt && qx package update && qx package install && npm run compile && ./extra.sh",
+    "qooxdoo": "date > source/resource/eduAnat2/buildDate.txt && qx package update && qx package install && npm run compile && ./extra.sh",
     "start": "electron .",
     "terser": "terser compiled/source/eduAnat2/bundle.js --mangle -o compiled/build/eduAnat2/bundle.js",
     "updateAll": "rm -rf node_modules && git pull && npm install && npm run build",
