--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "clean-bin1": "for i in ./EduAnat2-*; do rm -rf \"$i/swiftshader\"; done",
     "clean-bin2": "for i in ./EduAnat2-*; do rm -rf \"$i/resources/inspector\"; done",
     "compile": "qx compile --target source && qx compile --target build",
+    "dev": "qx compile --target source --watch",
     "package": "npm run package-bin && npm run clean-bin && npm run package-exe-deb-rpm && npm run zip",
     "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/build/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
