--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@qooxdoo/compiler": "1.0.0-beta-20201001-1018",
+    "@qooxdoo/compiler": "1.0.0-beta-20201003-1033",
     "acorn": "8.0.2",
     "async": "3.2.0",
     "bluebird": "3.7.2",
@@ -33,8 +33,8 @@
     "script-loader": "0.7.2",
     "socket.io-client": "2.3.1",
     "source-map-loader": "1.1.0",
-    "style-loader": "1.2.1",
-    "terser": "5.3.3",
+    "style-loader": "1.3.0",
+    "terser": "5.3.4",
     "three": "0.121.1",
     "url-loader": "4.1.0",
     "webpack": "4.44.2",
@@ -54,11 +54,13 @@
     "clean-bin1": "for i in ./EduAnat2-*; do rm -rf \"$i/swiftshader\"; done",
     "clean-bin2": "for i in ./EduAnat2-*; do rm -rf \"$i/resources/inspector\"; done",
     "compile": "qx compile --target source && qx compile --target build",
+    "setDate" : "date > source/resource/eduAnat2/buildDate.txt",
+    "deploy": "qx deploy --clean --out dist",
     "dev": "qx compile --target source --watch",
     "package": "npm run package-bin && npm run clean-bin && npm run package-exe-deb-rpm && npm run zip",
     "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/build/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
-    "qooxdoo": "date > source/resource/eduAnat2/buildDate.txt && qx package update && qx package install && npm run compile && ./extra.sh",
+    "qooxdoo": "npm run setDate && qx package update && qx package install && npm run compile && npm run deploy && ./extra.sh",
     "start": "electron .",
     "terser": "terser compiled/source/eduAnat2/bundle.js --mangle -o compiled/build/eduAnat2/bundle.js",
     "updateAll": "rm -rf node_modules && git pull && npm install && npm run build",
