change deploy output from dist to compiled/dist

--- a/builder-effective-config.yaml
+++ b/builder-effective-config.yaml
@@ -1,6 +1,6 @@
 directories:
   output: dist
-  buildResources: compiled/build
+  buildResources: compiled/dist
   app: compiled/build
 appId: com.ife.eduanat2
 compression: maximum
