--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "acorn": "8.0.2",
     "async": "3.2.0",
     "bluebird": "3.7.2",
+    "bowser": "2.11.0",
     "chroma-js": "2.1.0",
     "css-loader": "4.3.0",
     "desk-ui": "valette/desk-ui",
@@ -34,7 +35,6 @@
     "socket.io-client": "2.3.1",
     "source-map-loader": "1.1.0",
     "style-loader": "1.3.0",
-    "terser": "5.3.4",
     "three": "0.121.1",
     "url-loader": "4.1.0",
     "webpack": "4.44.2",
@@ -49,20 +49,19 @@
     "build": "npm run clean && npm run buildApps && npm run package",
     "buildApps": "npm run buildCore && ./extra2.sh",
     "buildCore": "node node_modules/desk-ui/source/build-worker.js && webpack && npm run qooxdoo",
-    "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
+    "clean": "rm -rf compiled && rm -rf EduAnat2-*",
     "clean-bin": "npm run clean-bin1 && npm run clean-bin2",
     "clean-bin1": "for i in ./EduAnat2-*; do rm -rf \"$i/swiftshader\"; done",
     "clean-bin2": "for i in ./EduAnat2-*; do rm -rf \"$i/resources/inspector\"; done",
     "compile": "qx compile --target source && qx compile --target build",
-    "setDate" : "date > source/resource/eduAnat2/buildDate.txt",
+    "setDate": "date > source/resource/eduAnat2/buildDate.txt",
     "deploy": "qx deploy --clean --out compiled/dist",
     "dev": "qx compile --target source --watch",
     "package": "npm run package-bin && npm run clean-bin && npm run package-exe-deb-rpm && npm run zip",
-    "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/build/ EduAnat2",
+    "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/dist/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
     "qooxdoo": "npm run setDate && qx package update && qx package install && npm run compile && npm run deploy && ./extra.sh",
     "start": "electron .",
-    "terser": "terser compiled/source/eduAnat2/bundle.js --mangle -o compiled/build/eduAnat2/bundle.js",
     "updateAll": "rm -rf node_modules && git pull && npm install && npm run build",
     "zip": "for i in ./EduAnat2-*; do zip -rqy \"dist/${i%/}.zip\" \"$i\"; done"
   }
