--- a/package.json
+++ b/package.json
@@ -50,14 +50,11 @@
     "buildApps": "npm run buildCore && ./extra2.sh",
     "buildCore": "node node_modules/desk-ui/source/build-worker.js && webpack && npm run qooxdoo",
     "clean": "rm -rf compiled && rm -rf EduAnat2-*",
-    "clean-bin": "npm run clean-bin1 && npm run clean-bin2",
-    "clean-bin1": "for i in ./EduAnat2-*; do rm -rf \"$i/swiftshader\"; done",
-    "clean-bin2": "for i in ./EduAnat2-*; do rm -rf \"$i/resources/inspector\"; done",
     "compile": "qx compile --target source && qx compile --target build",
     "setDate": "date > source/resource/eduAnat2/buildDate.txt",
     "deploy": "qx deploy --clean --out compiled/dist",
     "dev": "qx compile --target source --watch",
-    "package": "npm run package-bin && npm run clean-bin && npm run package-exe-deb-rpm && npm run zip",
+    "package": "npm run package-bin && npm run package-exe-deb-rpm && npm run zip",
     "package-bin": "electron-packager --all --overwrite --prune=true --icon=icon.ico --azar=true compiled/dist/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
     "qooxdoo": "npm run setDate && qx package update && qx package install && npm run compile && npm run deploy && ./extra.sh",
