--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "main": "script.js",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.11.6",
     "@qooxdoo/compiler": "1.0.0-beta-20201003-1033",
-    "acorn": "8.0.2",
+    "acorn": "8.0.4",
     "async": "3.2.0",
     "bluebird": "3.7.2",
     "bowser": "2.11.0",
+    "buffer": "5.6.0",
     "chroma-js": "2.1.0",
-    "css-loader": "4.3.0",
+    "crypto-browserify": "3.12.0",
+    "css-loader": "5.0.0",
     "desk-ui": "valette/desk-ui",
     "electron": "10.1.3",
-    "electron-builder": "22.8.1",
+    "electron-builder": "22.9.1",
     "electron-packager": "15.1.0",
     "jssha": "3.1.2",
     "lodash": "4.17.20",
@@ -31,12 +32,13 @@
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
     "socket.io-client": "2.3.1",
-    "source-map-loader": "1.1.0",
-    "style-loader": "1.3.0",
+    "source-map-loader": "1.1.1",
+    "stream-browserify": "3.0.0",
+    "style-loader": "2.0.0",
     "three": "0.121.1",
-    "url-loader": "4.1.0",
-    "webpack": "4.44.2",
-    "webpack-cli": "3.3.12",
+    "url-loader": "4.1.1",
+    "webpack": "5.1.0",
+    "webpack-cli": "4.0.0",
     "webworkify-webpack": "2.1.5",
     "xterm": "4.9.0"
   },
