--- a/package.json
+++ b/package.json
@@ -10,37 +10,39 @@
     "url": "git://github.com/valette/eduAnat2.git"
   },
   "main": "script.js",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@qooxdoo/compiler": "1.0.0",
-    "acorn": "8.2.4",
-    "async": "3.2.0",
+    "@qooxdoo/compiler": "1.0.3",
+    "acorn": "8.5.0",
+    "async": "3.2.2",
     "bluebird": "3.7.2",
     "bowser": "2.11.0",
     "buffer": "6.0.3",
     "chroma-js": "2.1.2",
     "crypto-browserify": "3.12.0",
-    "css-loader": "5.2.6",
+    "css-loader": "6.5.1",
     "desk-ui": "valette/desk-ui",
-    "electron": "13.0.1",
-    "electron-builder": "22.10.5",
-    "electron-packager": "15.2.0",
+    "electron": "15.3.1",
+    "@electron/remote": "2.0.1",
+    "electron-builder": "22.13.1",
+    "electron-packager": "15.4.0",
     "jssha": "3.2.0",
     "lodash": "4.17.21",
     "numeric": "1.2.6",
     "papaya-viewer": "1.0.1449",
     "random-js": "2.1.0",
     "script-loader": "0.7.2",
-    "socket.io-client": "4.1.2",
+    "socket.io-client": "4.3.2",
     "source-map-loader": "3.0.0",
     "stream-browserify": "3.0.0",
-    "style-loader": "2.0.0",
-    "three": "0.128.0",
+    "style-loader": "3.3.1",
+    "three": "0.134.0",
     "url-loader": "4.1.1",
-    "webpack": "5.37.1",
-    "webpack-cli": "4.7.0",
+    "webpack": "5.64.0",
+    "webpack-cli": "4.9.1",
     "webworkify-webpack": "2.1.5",
-    "xterm": "4.12.0"
+    "xterm": "4.15.0"
   },
   "engines": {
     "node": ">=8.0.0"
