--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+
+    - run: sudo dpkg --add-architecture i386
+    - run: wget -qO - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
+    - run: sudo add-apt-repository ppa:cybermax-dexter/sdl2-backport
+    - run: sudo apt-add-repository "deb https://dl.winehq.org/wine-builds/ubuntu $(lsb_release -cs) main"
+    - run: sudo apt install --install-recommends winehq-stable
     - run: npm install
     - run: npm run build
 #    - run: npm test
