--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,7 @@ jobs:
         sudo dpkg --add-architecture i386
         sudo apt-get update -qq
         sudo apt-get install -yqq wine-stable
+        sudo apt-get install rpm
     - run: npm install
     - run: npm run build
 #    - run: npm test
