--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,6 +39,8 @@ jobs:
 #        sudo apt-get update -qq
 #        sudo apt-get install -yqq wine-stable
 #        sudo apt-get install rpm
-#    - run: npm install
-    - run: npm run build
+    - name : Build
+      run: |
+        npm install
+        npm run build
 #    - run: npm test
