--- a/builder-effective-config.yaml
+++ b/builder-effective-config.yaml
@@ -5,6 +5,10 @@ directories:
 appId: com.ife.eduanat2
 compression: maximum
 productName: Eduanat2
+
+extraResources:
+  - "./node_modules/@electron/remote/**"
+
 win:
   target:
     - target: nsis
