--- a/package.json
+++ b/package.json
@@ -11,38 +11,29 @@
   },
   "main": "script.js",
   "dependencies": {
-    "@electron/remote":"2.0.8"
+    "@electron/remote": "2.0.8"
   },
   "devDependencies": {
-    "@qooxdoo/compiler": "1.0.3",
-    "acorn": "8.7.1",
+    "@qooxdoo/framework": "7.2.1",
+    "acorn": "8.8.0",
     "async": "3.2.4",
-    "bluebird": "3.7.2",
     "bowser": "2.11.0",
     "buffer": "6.0.3",
     "chroma-js": "2.4.2",
     "crypto-browserify": "3.12.0",
-    "css-loader": "6.7.1",
-    "desk-ui": "valette/desk-ui",
-    "electron": "19.0.7",
-    "electron-builder": "23.1.0",
-    "electron-packager": "15.5.1",
-    "jssha": "3.2.0",
+    "desk-ui": "github:valette/desk-ui",
+    "electron": "21.1.1",
+    "electron-builder": "23.6.0",
+    "electron-packager": "16.0.0",
+    "jssha": "3.3.0",
     "lodash": "4.17.21",
     "numeric": "1.2.6",
     "papaya-viewer": "1.0.1449",
     "random-js": "2.1.0",
-    "script-loader": "0.7.2",
-    "socket.io-client": "4.5.1",
-    "source-map-loader": "4.0.0",
+    "socket.io-client": "4.5.2",
     "stream-browserify": "3.0.0",
-    "style-loader": "3.3.1",
-    "three": "0.137.0",
-    "url-loader": "4.1.1",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webworkify-webpack": "2.1.5",
-    "xterm": "4.19.0"
+    "three": "0.145.0",
+    "xterm": "5.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -50,15 +41,14 @@
   "scripts": {
     "build": "npm run clean && npm run buildApps",
     "buildAll": "npm run build && npm run package",
-    "buildApps": "npm run buildCore && cp script.js compiled/dist",
-    "buildCore": "node node_modules/desk-ui/source/build-worker.js && webpack && npm run qooxdoo",
+    "buildApps": "npm run qooxdoo && cp script.js compiled/dist",
     "clean": "rm -rf compiled && rm -rf dist && rm -rf EduAnat2-*",
     "compile": "qx compile --target source && qx compile --target build",
     "setDate": "date > source/resource/eduAnat2/buildDate.txt",
     "deploy": "qx deploy --clean --out compiled/dist",
     "dev": "qx compile --target source --watch --update-po-files",
     "package": "npm run package-exe-deb-rpm && npm run package-bin && npm run zip",
-    "package-bin": "electron-packager --arch x64,arm64 --platform darwin,linux,mas,win32 --overwrite --prune=true --icon=icon.ico --azar=true compiled/dist/ EduAnat2",
+    "package-bin": "electron-packager --omit=dev --arch x64,arm64 --platform darwin,linux,mas,win32 --overwrite --prune=true --icon=icon.ico --azar=true compiled/dist/ EduAnat2",
     "package-exe-deb-rpm": "electron-builder build -wl --config builder-effective-config.yaml",
     "qooxdoo": "npm run setDate && qx package update && qx package install && npm run compile && npm run deploy && ./extra.sh",
     "start": "electron .",
